Typo in pug file. Fixes #1367

--- a/softwerkskammer/lib/administration/views/memberTable.pug
+++ b/softwerkskammer/lib/administration/views/memberTable.pug
@@ -38,7 +38,7 @@ block content
               tr
                 td: a.btn-sm(href='/members/edit/' + encodeURIComponent(member.nickname())): i.fa.fa-edit.fa-fw
                 td #{member.created()}
-                td +linkedMember(member.nickname())
+                td: +linkedMember(member.nickname())
                 td #{member.firstname()}
                 td #{member.lastname()}
                 td #{member.location()}
