--- a/softwerkskammer/frontend/sass/variables.scss
+++ b/softwerkskammer/frontend/sass/variables.scss
@@ -1,6 +1,7 @@
 // we are overriding the following values from the original bootstrap variables.scss
 
 $theme-colors: (
+        "primary": #337ab7,
         "warning": #EBB847
 );
 
