--- a/softwerkskammer/views/layout.pug
+++ b/softwerkskammer/views/layout.pug
@@ -1,16 +1,16 @@
 extends commonLayout
 block specific
-  .col-md-8
+  .col-8
     if (statusmessage)
       +notificationsBlock(statusmessage)
     block content
     p &nbsp;
-  .col-md-4.hidden-print
+  .col-4.hidden-print
     .page-header.visible-xs.visible-sm
       h2 #{t('activities.activities')}
     #calendar
     .row
-      .col-md-12
+      .col-12
         h2 Wiki Links
         h4
           a(href='/wiki/events/2018') #{t('general.events_in_europe')} 2018
