more bs4 - dialogs - validation - ...

--- a/commonComponents/pug/500common.pug
+++ b/commonComponents/pug/500common.pug
@@ -2,13 +2,13 @@ block title
   | #{status} - #{error}
 block content
   .row
-    .col-md-6
+    .col-lg-6
       h3 #{t('error.congratulations')}
       p #{t('error.found500')}
         | #{t('error.click_links')}
       !=t('error.error500_text', { postProcess: 'pug' })
       p #{t('error.sorry')}
-    .col-md-6
+    .col-lg-6
       h3 #{status}
       p
         pre #{removeServerpaths(error.stack)}
