--- a/commonComponents/pug/validationErrorCommon.pug
+++ b/commonComponents/pug/validationErrorCommon.pug
@@ -1,7 +1,7 @@
 block title
   | #{t('validation.validation_error')}
 block content
-  .col-md-12
+  .col-12
     .page-header
       h2 #{t('validation.failed')}
         small  #{t('validation.validation')}
