--- a/softwerkskammer/frontend/sass/variables.scss
+++ b/softwerkskammer/frontend/sass/variables.scss
@@ -11,3 +11,4 @@ $font-family-monospace: "Source Code Pro", Menlo, Monaco, Consolas, "Courier New
 $font-size-base: 1rem;
 
 $headings-font-weight: bold;
+$small-font-size: 60%;
