--- a/softwerkskammer/views/errorPages/404.pug
+++ b/softwerkskammer/views/errorPages/404.pug
@@ -4,9 +4,9 @@ block title
   | 404 - #{t('error.missing_page')}
 block content
   .row
-    .col-md-6
+    .col-lg-6
       h3 #{t('error.congratulations')}
       p #{t('error.found404')}
       p #{t('error.click_links')}
-    .col-md-6
+    .col-lg-6
       h3 404 - #{t('error.page_is_missing')}
