--- a/softwerkskammer/views/layoutOnlyMain.pug
+++ b/softwerkskammer/views/layoutOnlyMain.pug
@@ -1,6 +1,6 @@
 extends commonLayout
 block specific
-  .col-md-12
+  .col-12
     if (statusmessage)
       +notificationsBlock(statusmessage)
     block content
