--- a/softwerkskammer/lib/site/views/impressum.pug
+++ b/softwerkskammer/lib/site/views/impressum.pug
@@ -4,7 +4,7 @@ block title
   | Impressum
 block content
   .row
-    .col-md-12
+    .col-12
       h3 Impressum
       p Angaben gemäß § 5 TMG:
       address.
