--- a/softwerkskammer/views/errorPages/authenticationError.pug
+++ b/softwerkskammer/views/errorPages/authenticationError.pug
@@ -4,10 +4,10 @@ block title
   | #{status} - #{t('authentication.error')}
 block content
   .row
-    .col-md-6
+    .col-lg-6
       !=t('authentication.error_text', { postProcess: 'pug' })
       p #{t('error.sorry')}
-    .col-md-6
+    .col-lg-6
       h3 #{status}
       p #{error}
       h4 Stacktrace:
