bs4 - step by step

--- a/commonComponents/pug/dataTables-mixin.pug
+++ b/commonComponents/pug/dataTables-mixin.pug
@@ -1,7 +1,7 @@
 
 mixin dataTableImport()
   script(src='/clientscripts/jquery.dataTables.js')
-  script(src='/clientscripts/dataTables.bootstrap.js')
+  script(src='/clientscripts/dataTables.bootstrap4.js')
 
 mixin dataTable(clazz, sorting, columns, stateSaveAndSearch)
   script.
