--- a/softwerkskammer/lib/administration/views/activityTable.pug
+++ b/softwerkskammer/lib/administration/views/activityTable.pug
@@ -10,14 +10,12 @@ block title
 
 block content
   .row
-    .col-md-12
+    .col-12
       .page-header
-        h2 Verwaltung
+        h2 Verwaltung #{' '}
           small  Aktivitäten  
-  .row
-    .col-md-12
       .table-responsive
-        table.table.table-condensed.table-hover.table-striped#activitytable
+        table.table.table-sm.table-hover.table-striped#activitytable
           thead
             tr
               th Edit
