--- a/softwerkskammer/lib/administration/views/interests.pug
+++ b/softwerkskammer/lib/administration/views/interests.pug
@@ -6,12 +6,12 @@ block title
 
 block content
   .row
-    .col-md-12
+    .col-12
       .page-header
-        h2 Verwaltung
+        h2 Verwaltung #{' '}
           small  Interessen
   .row
-    .col-md-12
+    .col-12
       h4 #{interests.length} Interessen:
 
       for interest in interests
