--- a/softwerkskammer/lib/administration/views/memberAndGroupTable.pug
+++ b/softwerkskammer/lib/administration/views/memberAndGroupTable.pug
@@ -12,12 +12,12 @@ block title
 
 block content
   .row
-    .col-md-12
+    .col-12
       .page-header
-        h2 Verwaltung
+        h2 Verwaltung #{' '}
           small  Mitglieder und Gruppen
       .table-responsive
-        table.table.table-condensed.table-hover.table-striped#memberandgrouptable
+        table.table.table-sm.table-hover.table-striped#memberandgrouptable
           thead
             tr
               th Name
