--- a/softwerkskammer/lib/administration/views/memberTable.pug
+++ b/softwerkskammer/lib/administration/views/memberTable.pug
@@ -11,12 +11,12 @@ block title
 
 block content
   .row
-    .col-md-12
+    .col-12
       .page-header
-        h2 Verwaltung
+        h2 Verwaltung #{' '}
           small  Mitglieder
       .table-responsive
-        table.table.table-condensed.table-hover.table-striped#membertable
+        table.table.table-sm.table-hover.table-striped#membertable
           thead
             tr
               th Edit
