--- a/softwerkskammer/lib/members/views/memberlist-mixin.pug
+++ b/softwerkskammer/lib/members/views/memberlist-mixin.pug
@@ -3,15 +3,15 @@ mixin memberlistHeading(firstPart, count)
   
 mixin memberlist(members, organizers)
   if (accessrights.isRegistered())
-    dl.dl-horizontal
+    dl.row
       for member in members
-        dt: .member
+        dt.col-4: .member
           +linkedMember(member.nickname())
           if (member.hasImage())
             | &nbsp; <a href='#' rel='tooltip' data-content=#{member.nickname()} title='<div style="height: 128px;"><img src=#{member.avatarUrl(128)} width="128" height="128"/></div>' >
             img.hidden-print(src=member.inlineAvatar(), width='16', height='16')
             | </a>
-        dd #{member.firstname()} #{member.lastname()}
+        dd.col-8 #{member.firstname()} #{member.lastname()}
           if member.location()
             |, #{member.location()}
           | &nbsp;
